Update Bitcoin.conf to include pruning
Added pruning with comments, to learn more see https://bitcoin.org/en/release/v0.12.0

--- a/Setup_Guides/bitcoin.conf
+++ b/Setup_Guides/bitcoin.conf
@@ -31,6 +31,11 @@ mempoolexpiry=72
 maxmempool=300
 maxorphantx=100
 
+## To save disk space you can prune the blockchain to n MB below. Min value is 550. 0 means Pruning is disabled.
+# Note if you prune before syncing, Bitcoin will still validate every block but it will only use up the max disk
+# space specified below, deleting block data as it syncs. The node still relays transactions to other nodes when enabled.
+prune=0
+
 ## Spam protection
 limitfreerelay=10
 minrelaytxfee=0.0001
